Address part of PR feedback